--- a/basic-concepts/index.html
+++ b/basic-concepts/index.html
@@ -7,6 +7,22 @@
 </head>
 <body>
     <h1 id="someText"></h1>
+    <script>
+        let students = `[
+        {
+            "name": "Rajdeep",
+            "age": 30,
+            "height": 180
+        },
+        {
+            "name": "Mukherjee",
+            "age": 35,
+            "height": 188
+        }
+    ]`
+        
+    console.log(JSON.parse(students)) 
+    </script>
     <script src="home.js"></script>
 </body>
 </html>
