--- a/your-age-in-days/index.html
+++ b/your-age-in-days/index.html
@@ -12,11 +12,15 @@
     <h2>Challenge 1: Your Age in Days</h2>
         <div class="flex-box-container-1">
             <div>
-                <button class="btn btn-primary">Click Me</button>
+                <button class="btn btn-primary" onclick="ageInDays()">Click Me</button>
             </div>
             <div>
-                <button class="btn btn-danger">Reset</button>
+                <button class="btn btn-danger" onclick="reset()">Reset</button>
             </div>  
+        </div>
+        
+        <div class="flex-box-container-1">
+            <div id="flex-box-result"></div>
         </div>
     </div>  
     <script src="static/js/script.js"></script>
